--- a/style.css
+++ b/style.css
@@ -342,3 +342,34 @@ p {
     } 
 
 }
+
+/* footer section */
+
+footer {
+    background-color: rgb(232, 232, 232);
+    position: relative;
+}
+
+.contact {
+    display: grid;
+    grid-template: auto 1fr 1fr/ max-content 1fr;
+    align-items: center;
+    padding: 2rem;
+}
+
+.contact > h3 {
+    grid-column: 1/ span 2;
+    padding-left: 2rem;
+}
+
+.mail {
+    width: 2rem;
+    align-items: flex-start;
+    margin: 1rem;
+}
+
+.phone {
+    width: 2rem;
+    align-items: flex-start;
+    margin: 1rem;
+}
